--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@ Version ?.?.?, released ????-??-??
 ----------------------------------
 SVN version: ?????
 
+Version 2.1.0, released 2008-05-10
+----------------------------------
+SVN version: 10202
+
 Heads up!
 ~~~~~~~~~
 - Make site require cookies
@@ -21,6 +25,8 @@ Features
 - Made use of new short URLs provided by XP 5.6.6
   (kiesel)
 - Made event listing only show events in current month by default
+  (kiesel)
+- Added support for Google Analytics
   (kiesel)
 
 Bugfixes
