- release 2.1.2 - display news only half a year back
git-svn-id: http://svn.xp-framework.net/xpforge/trunk/projects/www/uska@11004 d2cacbed-c0f6-0310-851a-9dad52fc623a

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,12 @@ Version 2.1.2, released 2009-04-21
 ----------------------------------
 SVN version: ?????
 
+Features
+~~~~~~~~
+- Display news entries only half a year the most
+  on the frontpage
+  (kiesel)
+
 Bugfixes
 ~~~~~~~~
 - Made points table reappear
