--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,15 @@ Version ?.?.?, released ????-??-??
 ----------------------------------
 SVN version: ?????
 
+Version 2.1.3, released 2010-03-01
+----------------------------------
+SVN version: ?????
+
+Features
+~~~~~~~~
+- Uses new database server
+  (kiesel)
+
 
 Version 2.1.2, released 2009-04-21
 ----------------------------------
