--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@ Version ?.?.?, released ????-??-??
 ----------------------------------
 SVN version: ?????
 
+Version 2.1.5, released 2010-08-08
+----------------------------------
+SVN version: 12500
+
 Bugfixes
 ~~~~~~~~
 - Fixed bug that only admins were able to edit attend information
